# mcat

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
docs/: DEVELOPMENT.md  STRUCTURE.md
src/: cli.rs  commands.rs  common.rs  config.rs  db.rs  display.rs  edit.rs  errors.rs  lib.rs  main.rs  models.rs  output.rs  repos.rs  services.rs  utils.rs
src/commands/: add.rs  check.rs  display.rs  edit.rs  export.rs  import.rs  init.rs  list.rs  remove.rs  update.rs
src/models/: filter.rs  track.rs
src/repos/: toml_repo.rs  track_repo.rs
src/repos/track_repo/: table_images.rs  table_lyrics.rs  table_track_files.rs  table_tracks.rs
