[package]
name = "mcat"
version = "0.1.0"
edition = "2024"
authors = ["chimes-of-freedom chimes-of-freedom@outlook.com"]
license = "MIT OR Apache-2.0"
description = "Music Cataloging Tool"

[dependencies]
blake3 = "1.8.3"
clap = { version = "4.5.60", features = ["derive"] }
infer = "0.19.0"
lofty = "0.23.2"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20.0"
toml = "1.1.0"
