[package]
name = "mcat"
version = "0.1.0"
edition = "2024"
authors = ["chimes-of-freedom <chimes-of-freedom@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Music Cataloging Tool"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version = "2.14.0", features = ["serde"] }
lofty = "0.24.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tabled = "0.21.0"
tempfile = "3.27.0"
